--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,4 +1,56 @@
 .c
 {
     height: 100vh;
+    position: relative;
+}
+
+.c-bg
+{
+    width: 20px;
+    height: 100%;
+    background-color: #59b256;
+    position: absolute;
+}
+
+.c-wrapper
+{
+    padding: 50px;
+    display: flex;
+}
+
+.c-left
+{
+    flex: 1;
+}
+
+.c-right
+{
+    flex: 1;
+}
+
+.c-title
+{
+    font-size: 60px;
+    width: 80%;
+}
+
+.c-info-item
+{
+    display: flex;
+    align-items: center;
+    margin: 50px 0px;
+    font-weight: 300;
+    width: 70%;
+}
+
+.c-icon
+{
+    width: 30px;
+    height: 30px;
+    margin-right: 20px;
+}
+
+.c-desc
+{
+    font-weight: 200;
 }
