--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -26,6 +26,10 @@
 .c-right
 {
     flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .c-title
@@ -53,4 +57,38 @@
 .c-desc
 {
     font-weight: 200;
+}
+
+form
+{
+    margin-top: 20px;
+}
+
+input
+{
+    width: 50%;
+    height: 50px;
+    border: none;
+    border-bottom: 1px solid black;
+    margin: 10px 0px;
+    font-size: 14px;
+    padding-left: 10px;
+}
+
+textarea
+{
+    width: 100%;
+    margin: 10px 0px;
+    font-size: 14px;
+    padding-left: 10px;
+}
+
+button
+{
+    border: none;
+    padding: 15px;
+    background-color: #59b256;
+    color: white;
+    font-weight: 500;
+    cursor: pointer;
 }
