--- a/src/components/product/product.css
+++ b/src/components/product/product.css
@@ -37,3 +37,13 @@
 {
     transform: translateY(-100%);
 }
+
+@media screen and (max-width: 480px) {
+
+    .p
+    {
+        width: 40%;
+        height: 20vh;
+    }
+
+}
