--- a/src/components/productList/productList.css
+++ b/src/components/productList/productList.css
@@ -30,3 +30,22 @@
     flex-wrap: wrap;
     justify-content: space-between;
 }
+
+@media screen and (max-width: 480px) {
+
+    .pl
+    {
+        padding: 10px;
+    }
+
+    .pl-texts
+    {
+        width: 100%;
+    }
+
+    .pl-desc
+    {
+        display: none;
+    }
+
+}
